구글 로그인 구현

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--    <meta name ="google-signin-client_id" content="938842229751-bhmkrt95tjib70nmkeba9c70amp3gill.apps.googleusercontent.com">-->
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-hello
+<ul>
+    <li id="GgCustomLogin">
+        <a href="https://accounts.google.com/o/oauth2/auth?client_id=938842229751-bhmkrt95tjib70nmkeba9c70amp3gill.apps.googleusercontent.com&redirect_uri=http://localhost:8090/api/v2/users/login/google&response_type=code&scope=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile">
+            <span>Login with Google</span>
+        </a>
+    </li>
+    <li id="Naver">
+        <a href="">
+            <span>Login with Naver</span>
+        </a>
+    </li>
+</ul>
+<!--<script>-->
+
+<!--    //처음 실행하는 함수-->
+<!--    function init() {-->
+<!--        gapi.load('auth2', function() {-->
+<!--            gapi.auth2.init();-->
+<!--            options = new gapi.auth2.SigninOptionsBuilder();-->
+<!--            options.setPrompt('select_account');-->
+<!--            // 추가는 Oauth 승인 권한 추가 후 띄어쓰기 기준으로 추가-->
+<!--            options.setScope('email profile openid https://www.googleapis.com/auth/user.birthday.read');-->
+<!--            // 인스턴스의 함수 호출 - element에 로그인 기능 추가-->
+<!--            // GgCustomLogin은 li태그안에 있는 ID, 위에 설정한 options와 아래 성공,실패시 실행하는 함수들-->
+<!--            gapi.auth2.getAuthInstance().attachClickHandler('GgCustomLogin', options, onSignIn, onSignInFailure);-->
+<!--        })-->
+<!--    }-->
+<!--    // "https://accounts.google.com/o/oauth2/auth?client_id=938842229751-bhmkrt95tjib70nmkeba9c70amp3gill.apps.googleusercontent.com&redirect_uri=http://localhost:8090/api/v2/users/login/google&response_type=code&scope=https://www.googleapis.com/auth/userinfo.emailhttps://www.googleapis.com/auth/userinfo.profile">-->
+<!--    function onSignIn(googleUser) {-->
+<!--        var access_token = googleUser.getAuthResponse().access_token-->
+<!--        $.ajax({-->
+<!--            // people api를 이용하여 프로필 및 생년월일에 대한 선택동의후 가져온다.-->
+<!--            url: 'https://people.googleapis.com/auth/userinfo.profile'-->
+<!--            // key에 자신의 API 키를 넣습니다.-->
+<!--            , data: {personFields:'birthdays', key:'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', 'access_token': access_token}-->
+<!--            , method:'GET'-->
+<!--        })-->
+<!--        .done(function(e){-->
+<!--            //프로필을 가져온다.-->
+<!--            var profile = googleUser.getBasicProfile();-->
+<!--            console.log(profile)-->
+<!--        })-->
+<!--        .fail(function(e){-->
+<!--            console.log(e);-->
+<!--        })-->
+<!--    }-->
+<!--    function onSignInFailure(t){-->
+<!--        console.log(t);-->
+<!--    }-->
+<!--</script>-->
+<!--//구글 api 사용을 위한 스크립트-->
+<!--<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>-->
 </body>
 </html>
