--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,50 +13,40 @@
         </a>
     </li>
     <li id="Naver">
-        <a href="">
+        <a onclick="showLoginPopup();">
             <span>Login with Naver</span>
         </a>
     </li>
+    <li id="Kakao">
+        <a onclick="showKakaoLogin();">
+<!--        <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=577a9e809ac9c4ba6256e32b695c1c34&redirect_uri=http://localhost:8090/api/v2/users/login/kakao">-->
+            <span>Login with Kakao</span>
+        </a>
+    </li>
 </ul>
-<!--<script>-->
+<script>
 
-<!--    //처음 실행하는 함수-->
-<!--    function init() {-->
-<!--        gapi.load('auth2', function() {-->
-<!--            gapi.auth2.init();-->
-<!--            options = new gapi.auth2.SigninOptionsBuilder();-->
-<!--            options.setPrompt('select_account');-->
-<!--            // 추가는 Oauth 승인 권한 추가 후 띄어쓰기 기준으로 추가-->
-<!--            options.setScope('email profile openid https://www.googleapis.com/auth/user.birthday.read');-->
-<!--            // 인스턴스의 함수 호출 - element에 로그인 기능 추가-->
-<!--            // GgCustomLogin은 li태그안에 있는 ID, 위에 설정한 options와 아래 성공,실패시 실행하는 함수들-->
-<!--            gapi.auth2.getAuthInstance().attachClickHandler('GgCustomLogin', options, onSignIn, onSignInFailure);-->
-<!--        })-->
-<!--    }-->
-<!--    // "https://accounts.google.com/o/oauth2/auth?client_id=938842229751-bhmkrt95tjib70nmkeba9c70amp3gill.apps.googleusercontent.com&redirect_uri=http://localhost:8090/api/v2/users/login/google&response_type=code&scope=https://www.googleapis.com/auth/userinfo.emailhttps://www.googleapis.com/auth/userinfo.profile">-->
-<!--    function onSignIn(googleUser) {-->
-<!--        var access_token = googleUser.getAuthResponse().access_token-->
-<!--        $.ajax({-->
-<!--            // people api를 이용하여 프로필 및 생년월일에 대한 선택동의후 가져온다.-->
-<!--            url: 'https://people.googleapis.com/auth/userinfo.profile'-->
-<!--            // key에 자신의 API 키를 넣습니다.-->
-<!--            , data: {personFields:'birthdays', key:'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', 'access_token': access_token}-->
-<!--            , method:'GET'-->
-<!--        })-->
-<!--        .done(function(e){-->
-<!--            //프로필을 가져온다.-->
-<!--            var profile = googleUser.getBasicProfile();-->
-<!--            console.log(profile)-->
-<!--        })-->
-<!--        .fail(function(e){-->
-<!--            console.log(e);-->
-<!--        })-->
-<!--    }-->
-<!--    function onSignInFailure(t){-->
-<!--        console.log(t);-->
-<!--    }-->
-<!--</script>-->
-<!--//구글 api 사용을 위한 스크립트-->
-<!--<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>-->
+    // 네이버 로그인을 위한 팝업창 생성
+    function showLoginPopup(){
+        let uri = 'https://nid.naver.com/oauth2.0/authorize?' +
+            'response_type=code' +                  // 인증과정에 대한 내부 구분값 code 로 전공 (고정값)
+            '&client_id=QbmV1JksUqN_pOAFxdDl' +     // 발급받은 client_id 를 입력
+            '&state=' +             // CORS 를 방지하기 위한 특정 토큰값(임의값 사용)
+            '&redirect_uri=http://localhost:8090/api/v2/users/login/naver';   // 어플케이션에서 등록했던 CallBack URL를 입력
+
+        // 사용자가 사용하기 편하게끔 팝업창으로 띄어준다.
+        window.open(uri, "Naver Login Test PopupScreen", "width=450, height=600");
+    }
+
+    function showKakaoLogin(){
+        let uri = 'https://kauth.kakao.com/oauth/authorize' +
+            '?response_type=code' +
+            '&client_id=577a9e809ac9c4ba6256e32b695c1c34'+
+            '&redirect_uri=http://localhost:8090/api/v2/users/login/kakao';
+
+        window.open(uri, "Kakao Login Test PopupScreen", "width=450, height=600");
+    }
+
+</script>
 </body>
 </html>
